import 'domain/models/workout_set.dart';

List<DayItems> dayItems = [
  DayItems(id: 1, day: 'Monday'),
  DayItems(id: 2, day: 'Tuesday'),
  DayItems(id: 3, day: 'Wednesday'),
  DayItems(id: 4, day: 'Thursday'),
  DayItems(id: 5, day: 'Friday'),
  DayItems(id: 6, day: 'Saturday'),
];
